<resources>
    <string name="app_name">Pokedex</string>

    <string name="pokemons_title">Pokémons</string>
    <string name="items_title">Objets</string>
    <string name="account_title">Compte</string>

    <string name="paginated">Paginé</string>
    <string name="no_paginated">Non paginé</string>

    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>

    <string name="error_refresh">Impossible de rafraichir</string>
    <string name="error_load">Impossible de charger plus d\'éléments</string>

    <string name="pokemon_weight">Poids : %1$s kg</string>
    <string name="pokemon_height">Taille : %1$s m</string>

    <string name="theme">Thème :</string>
    <string name="theme_light">Clair</string>
    <string name="theme_dark">Foncé</string>
    <string name="theme_default">Automatique</string>
    <string name="imgDescPsy">Image de psykokwac</string>
    <string name="descdefault">DescDefault</string>
    <string name="descriptionPokemonDetail">Description</string>
    <string name="pokeType">Types</string>
    <string name="pokemonimage">pokemonImage</string>
    <string name="movename">MoveName</string>
    <string name="ppNumberString">PP</string>
    <string name="powerString">power</string>
    <string name="MoveNameLabel">Name</string>
    <string name="MoveTypeLabel">Type</string>
    <string name="MovePpLabel">PP</string>
    <string name="MovePowerLabel">Power</string>
    <string name="movesTitle">Moves</string>
    <string name="ct_item_image">CT Item Image</string>

</resources>
