<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:padding="8dp"
            android:text="@string/login" />


    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_margin="16dp"
            android:focusable="true">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDescPsy"
                android:src="@drawable/ic_psyduck"
                android:tint="?colorSecondary" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="30sp" />

    <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/themeLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_light" />

        <RadioButton
                android:id="@+id/themeDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark" />

        <RadioButton
                android:id="@+id/themeDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_default" />
    </RadioGroup>

</LinearLayout>