<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/moveName"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/movename"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Pokedex.Subtitle1" />

    <TextView
        android:id="@+id/moveType"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/pokeType"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Pokedex.Body1" />

    <TextView
        android:id="@+id/numberOfPP"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/ppNumberString"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Pokedex.Body1" />

    <TextView
        android:id="@+id/power"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/powerString"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Pokedex.Body1" />

</LinearLayout>
